test/pubsub/pod_must_have_test.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: pod-must-have-test
spec:
  match:
    kinds:
    - apiGroups: [ "" ]
      kinds: [ "Namespace" ]
  parameters:
    labels: [ "test" ]
