test/pubsub/publish-components.yaml
# ---
# apiVersion: dapr.io/v1alpha1
# kind: Component
# metadata:
#   name: pubsub
#   namespace: gatekeeper-system
# spec:
#   type: pubsub.redis
#   version: v1
#   metadata:
#   - name: redisHost
#     value: redis-master.default.svc.cluster.local:6379
#   - name: redisPassword
#     secretKeyRef:
#       name: redis
#       key: redis-password
# ---
apiVersion: connection.gatekeeper.sh/v1alpha1
kind: Connection
metadata:
  name: audit
  namespace: gatekeeper-system
spec:
  driver: "diskwriter"
  config:
    path: "/tmp/violations"
